Add some basic templating

--- a/dot_zsh/zshrc.d/100.setup-linuxbrew.sh.tmpl
+++ b/dot_zsh/zshrc.d/100.setup-linuxbrew.sh.tmpl
@@ -1,4 +1,5 @@
-# Linux Brew Setup
+{{ if (eq .chezmoi.os "linux") }}
 if [ -d "/home/linuxbrew" ]; then
   eval $(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
 fi
+{{ end }}
