--- a/dot_zsh/zshrc.d/100.setup-ruby.sh.tmpl
+++ b/dot_zsh/zshrc.d/100.setup-ruby.sh.tmpl
@@ -1,4 +1,6 @@
+{{ if (eq .chezmoi.os "darwin") }}
 export PATH="$HOME/.rbenv/shims/:$PATH"
 alias be="bundle exec"
 alias ber="bundle exec rake"
 alias bers="bundle exec rspec"
+{{ end }}
