--- a/dot_scripts/run_once_setup.sh.tmpl
+++ b/dot_scripts/run_once_setup.sh.tmpl
@@ -1,12 +1,16 @@
 #!/usr/bin/env bash
 
-echo "Installing some basic packages"
-
 {{ if (eq .chezmoi.os "linux") }}
-  {{- if (or (eq .chezmoi.osRelease.id "pop") (eq .chezmoi.osRelease.id "ubuntu") ) -}}
-sudo apt-get install -y zsh vim tmux htop git build-essential
-  {{- else if (or (eq .chezmoi.osRelease.id "manjaro") (eq .chezmoi.osRelease.id "arch" ) ) -}}
-sudo pacman -S zsh vim tmux htop git base-devel
-  {{- end -}}
+echo "Installing some basic packages"
+  {{ if (or (eq .chezmoi.osRelease.id "pop") (eq .chezmoi.osRelease.id "ubuntu") ) }}
+sudo apt-get install -y zsh vim tmux xclip htop git build-essential
+  {{ else if (or (eq .chezmoi.osRelease.id "manjaro") (eq .chezmoi.osRelease.id "arch" ) ) }}
+sudo pacman -S zsh vim tmux htop git xclip base-devel
+  {{ end }}
+ 
+if [[ ! -f "/home/linuxbrew/.linuxbrew/bin/brew" ]]; then
+  echo "Installing linux brew"  
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+fi
 {{ end }}
 
