--- a/dot_zsh/zshrc.d/100.setup-linuxbrew.sh.tmpl
+++ b/dot_zsh/zshrc.d/100.setup-linuxbrew.sh.tmpl
@@ -1,5 +1,6 @@
 {{ if (eq .chezmoi.os "linux") }}
 if [ -d "/home/linuxbrew" ]; then
   eval $(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
+  FPATH=$(brew --prefix)/share/zsh/site-functions:$FPATH
 fi
 {{ end }}
