--- a/dot_zsh/zshrc.d/100.general-aliases.sh.tmpl
+++ b/dot_zsh/zshrc.d/100.general-aliases.sh.tmpl
@@ -1,4 +1,6 @@
 alias dc=docker-compose
-{{ if (or (eq .chezmoi.osRelease.id "pop") (eq .chezmoi.osRelease.id "ubuntu") ) }}
+{{ if (eq .chezmoi.os "linux") }}
+  {{ if (or (eq .chezmoi.osRelease.id "pop") (eq .chezmoi.osRelease.id "ubuntu") ) }}
 alias update-all="sudo apt-get update && sudo apt-get upgrade -y && sudo apt-get dist-upgrade -y && sudo apt-get autoremove -y && brew update && brew upgrade"
+  {{ end }}
 {{ end }}
