--- a/dot_scripts/run_once_setup.sh.tmpl
+++ b/dot_scripts/run_once_setup.sh.tmpl
@@ -15,4 +15,9 @@ if [[ ! -f "/home/linuxbrew/.linuxbrew/bin/brew" ]]; then
 fi
   {{ end }}
 {{ end }}
-
+{{ if (eq .chezmoi.os "darwin") }}
+if [[ ! -f "/usr/local/bin/brew" ]]; then
+  echo "Installing Homebrew"
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+fi
+{{ end }}
