Add a few default programs

--- a/dot_scripts/run_once_setup.sh.tmpl
+++ b/dot_scripts/run_once_setup.sh.tmpl
@@ -19,5 +19,9 @@ fi
 if [[ ! -f "/usr/local/bin/brew" ]]; then
   echo "Installing Homebrew"
   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  
+  echo "Installing some brew apps"
+  brew install vim tmux wget gnupg@2.2 pinentry-mac temurin spectacle homebrew/cask-fonts/font-sauce-code-pro-nerd-font nvm rbenv
+  brew link gnupg@2.2
 fi
 {{ end }}
