--- a/dot_vim/run_once_install.sh.tmpl
+++ b/dot_vim/run_once_install.sh.tmpl
@@ -12,12 +12,12 @@ if [ ! -d "${HOME}/.zgen" ]; then
   git clone https://github.com/tarjoilija/zgen.git "${HOME}/.zgen"
 fi
 
-# Grab vundle
-if [ ! -d "${HOME}/.vim/bundle/Vundle.vim" ]; then
-  echo "Installing vundle"
-  git clone https://github.com/VundleVim/Vundle.vim.git "${HOME}/.vim/bundle/Vundle.vim"
+# Grab vim-plug
+if [ ! -d "${HOME}/.vim/autoload/plug.vim" ]; then
+  echo "Installing vim-plug"
+  curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 fi
 
 # Install all plugins
 echo "Installing vim plugins"
-vim +PluginInstall +qall
+vim +PlugInstall +qall
