--- a/private_dot_local/private_share/private_applications/discord-game.desktop.tmpl
+++ b/private_dot_local/private_share/private_applications/discord-game.desktop.tmpl
@@ -3,7 +3,11 @@ Name=Discord (Game)
 StartupWMClass=discord-game
 Comment=All-in-one voice and text chat for gamers that's free, secure, and works on both your desktop and phone.
 GenericName=Internet Messenger
+{{ if (eq .chezmoi.arch "arm64") }}
+Exec=/run/current-system/sw/bin/bash -c "export XDG_CONFIG_HOME=~/.config/discord-game; export TMPDIR=~/.config/discord-game/tmp; /run/current-system/sw/bin/armcord"
+{{ else }}
 Exec=/bin/bash -c "export XDG_CONFIG_HOME=~/.config/discord-game; export TMPDIR=~/.config/discord-game/tmp; /usr/share/discord/Discord"
+{{ end }}
 Icon=discord
 Type=Application
 Categories=Network;InstantMessaging;
