--- a/dot_scripts/run_once_setup.sh.tmpl
+++ b/dot_scripts/run_once_setup.sh.tmpl
@@ -8,7 +8,7 @@ sudo apt-get update && sudo apt-get install -y zsh vim tmux xclip htop git build
 sudo pacman -Syy && sudo pacman -S zsh vim tmux htop git xclip base-devel
   {{ end }}
 
-  {{ if (eq .chezmoi.arch "amd64") }} 
+  {{ if (and (eq .chezmoi.arch "amd64") (eq .chezmoi.osRelease.id "pop")) }} 
 if [[ ! -f "/home/linuxbrew/.linuxbrew/bin/brew" ]]; then
   echo "Installing linux brew"  
   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
