--- a/private_dot_local/private_share/private_applications/discord-name.desktop.tmpl
+++ b/private_dot_local/private_share/private_applications/discord-name.desktop.tmpl
@@ -6,7 +6,7 @@ GenericName=Internet Messenger
 {{ if (eq .chezmoi.arch "arm64") -}}
 Exec=/run/current-system/sw/bin/bash -c "export XDG_CONFIG_HOME=~/.config/discord-name; export TMPDIR=~/.config/discord-name/tmp; /run/current-system/sw/bin/armcord"
 {{ else -}}
-Exec=/bin/bash -c "export XDG_CONFIG_HOME=~/.config/discord-name; export TMPDIR=~/.config/discord-name/tmp; /usr/share/discord/Discord"
+Exec=/run/current-system/sw/bin/bash -c "export XDG_CONFIG_HOME=~/.config/discord-name; export TMPDIR=~/.config/discord-name/tmp; /run/current-system/sw/bin/discord"
 {{ end -}}
 Icon=discord
 Type=Application
