--- a/private_dot_config/i3status-rust/config.toml.tmpl
+++ b/private_dot_config/i3status-rust/config.toml.tmpl
@@ -1,5 +1,8 @@
+[theme]
 theme = "slick"
-icons = "awesome"
+
+[icons]
+icons = "awesome4"
 
 [[block]]
 block = "cpu"
@@ -7,63 +10,51 @@ interval = 5
 
 [[block]]
 block = "memory"
-display_type = "memory"
-format_mem = "{mem_used_percents}"
-format_swap = "{swap_used_percents}"
+format = " $icon $mem_avail.eng(prefix:M) " 
 
-{{ if (eq .chezmoi.arch "arm64") }}
+{{- if (eq .chezmoi.arch "arm64") }}
 [[block]]
 block = "temperature"
-collapsed = false
 interval = 10
-format = "{average}"
+format = " $icon $average "
 chip = "cpu_thermal-*"
 
 [[block]]
 block = "temperature"
-collapsed = false
 interval = 10
-format = "{average}"
+format = " $icon $average "
 chip = "gpu_thermal-*"
-{{ else }}
+{{- else }}
 [[block]]
 block = "temperature"
-collapsed = false
 interval = 2
-format = "{average}"
+format = " $icon $average "
 chip = "coretemp-isa-0000"
 
 [[block]]
 block = "nvidia_gpu"
 gpu_id = 0
 interval = 2
-show_temperature = true
-label = "GPU"
-{{ end }}
+format = " $icon $temperature "
+{{- end }}
 
 [[block]]
 block = "disk_space"
 path = "/"
-alias = "/"
-info_type = "available"
-unit = "GB"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = "{icon} {available}"
+format = " $icon $available "
 
-{{ if (eq .chezmoi.arch "arm64") }}
+{{- if (eq .chezmoi.arch "arm64") }}
 [[block]]
 block = "disk_space"
 path = "/mnt/NVMe"
-alias = "NVMe"
-info_type = "available"
-unit = "GB"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = "{icon} {available}"
-{{ end }}
+format = " $icon $available "
+{{- end }}
 
 [[block]]
 block = "battery"
@@ -73,5 +64,5 @@ interval = 10
 [[block]]
 block = "time"
 interval = 5
-format = "%a %d/%m %R"
+format = " $icon $timestamp.datetime() "
 
