Add media controls
set format for gpu

--- a/private_dot_config/i3status-rust/config.toml.tmpl
+++ b/private_dot_config/i3status-rust/config.toml.tmpl
@@ -35,7 +35,7 @@ chip = "coretemp-isa-0000"
 block = "nvidia_gpu"
 gpu_id = 0
 interval = 2
-format = " $icon $temperature "
+format = " $icon $utilization $memory $temperature "
 {{- end }}
 
 [[block]]
