--- a/private_dot_config/i3status-rust/config.toml.tmpl
+++ b/private_dot_config/i3status-rust/config.toml.tmpl
@@ -46,7 +46,17 @@ warning = 20.0
 alert = 10.0
 format = " $icon $available "
 
-{{- if (eq .chezmoi.arch "arm64") }}
+{{- if (eq .chezmoi.hostname "donnager") }}
+[[block]]
+block = "disk_space"
+path = "/mnt/Media"
+interval = 20
+warning = 20.0
+alert = 10.0
+format = " $icon $available "
+{{- end }}
+
+{{- if (eq .chezmoi.hostname "serenity") }}
 [[block]]
 block = "disk_space"
 path = "/mnt/NVMe"
