--- a/private_dot_config/i3status-rust/config.toml.tmpl
+++ b/private_dot_config/i3status-rust/config.toml.tmpl
@@ -10,9 +10,9 @@ interval = 5
 
 [[block]]
 block = "memory"
-format = " $icon $mem_avail.eng(prefix:M) " 
+format = " $icon $mem_avail.eng(p:M,w:3) " 
 
-{{- if (eq .chezmoi.arch "arm64") }}
+{{- if (eq .chezmoi.hostname "serenity") }}
 [[block]]
 block = "temperature"
 interval = 10
@@ -24,7 +24,9 @@ block = "temperature"
 interval = 10
 format = " $icon $average "
 chip = "gpu_thermal-*"
-{{- else }}
+{{- end }}
+
+{{- if (eq .chezmoi.hostname "donnager") }}
 [[block]]
 block = "temperature"
 interval = 2
@@ -44,7 +46,7 @@ path = "/"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = " $icon $available "
+format = " $icon $available.eng(p:G,w:3) "
 
 {{- if (eq .chezmoi.hostname "donnager") }}
 [[block]]
@@ -53,7 +55,7 @@ path = "/mnt/Media"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = " $icon $available "
+format = " $icon $available.eng(p:G,w:3) "
 {{- end }}
 
 {{- if (eq .chezmoi.hostname "serenity") }}
@@ -63,7 +65,7 @@ path = "/mnt/NVMe"
 interval = 20
 warning = 20.0
 alert = 10.0
-format = " $icon $available "
+format = " $icon $available.eng(p:G,w:3) "
 {{- end }}
 
 [[block]]
